[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragmap"
version = "0.1.0"
description = "RAGmap is a simple RAG visualization package for exploring document chunks and queries in embedding space"
readme = "README.md"
authors = [{ name = "João Galego", email = "jgalego1990@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = [
	"Embeddings",
	"RAG",
	"Visualization"
]
dependencies = [
    "boto3",
	"chromadb",
	"langchain",
	"numpy",
	"opentsne",
	"pandas",
	"plotly",
	"python-docx",
	"python-pptx",
	"PyPDF2",
	"scikit-learn",
	"sentence_transformers",
	"umap-learn"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
	"black",
	"bumpver",
	"isort",
	"jupyter[notebook]",
	"kaleido",
	"pip-tools",
	"pytest"
]

[project.urls]
Homepage = "https://github.com/JGalego/RAGmap"
